# NativeBitmapDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ludakchen/nativebitmapdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniImpl.cpp
app/src/main/cpp/model/: MyBitmap.cpp  MyBitmap.h
app/src/main/cpp/util/: logger.h  n_bitmap_helper.cpp  n_bitmap_helper.h
app/src/main/java/com/ludakchen/nativebitmapdemo/: MyApplication.java
app/src/main/java/com/ludakchen/nativebitmapdemo/activity/: MainActivity.java
app/src/main/java/com/ludakchen/nativebitmapdemo/util/: NBitmapHelper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ludakchen/nativebitmapdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
